<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.system.lsp.ui.Prestamo.DetallePrestamo">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2017"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                android:weightSum="4"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/documento">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/cap"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:text="Capital:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/capital"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_weight="1"
                        android:text="RD$ 0"
                        android:textColor="#000"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/inte"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:text="Interes:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/interes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingTop="2dp"
                        android:text="RD$ 0"
                        android:textColor="#000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/mor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:text="Mora:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/mora"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:text="RD$ 0"
                        android:textColor="#000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/bal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_weight="1"
                        android:text="Balance:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="RD$ 0"
                        android:textColor="#000"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/nombre_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="Nombre del cliente"
                android:textColor="@color/negro87"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fecha" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="81dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:weightSum="3"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/documento">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/cuo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Cot:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/cuotas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/pag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pag:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/pagada"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/completedStatus"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/pen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pen:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/negro87" />

                    <TextView
                        android:id="@+id/pendiente"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/documento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="Documento"
                android:textColor="@color/negro87"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre_cliente" />

            <TextView
                android:id="@+id/idprestamo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="#000"
                android:textColor="@color/bg_login"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                <Button
                    android:id="@+id/adelantarPago"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/completedStatus"
                    android:text="REALIZAR PAGO"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/documento"
                    app:layout_constraintTop_toBottomOf="@+id/pendiente" />

                <ImageView
                    android:id="@+id/Foto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:srcCompat="@drawable/ic_image" />

                <ImageView
                    android:id="@+id/Llamar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:srcCompat="@drawable/ic_call_black" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/MyCustomTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



</android.support.design.widget.CoordinatorLayout>
